[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-scene-analyzer"
version = "0.1.0"
description = "A tool to process videos into text transcripts and event logs using PySceneDetect and Omni LLMs."
readme = "README.md"
authors = [
    { name = "Akurata Cluster", email = "info@akurata-cluster.org" }
]
requires-python = ">=3.9"
dependencies = [
    "scenedetect>=0.6.3",
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "accelerate",
    "qwen-vl-utils",
    "torchvision"
]

[project.scripts]
video-scene-analyzer = "video_scene_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
